--- a/Grid.css
+++ b/Grid.css
@@ -5,6 +5,9 @@
 .bg-grid{
     background-image: url(image/black\ grid.png);
 }
+.grid{
+    padding-left: 7.6%;
+}
 /*.flag-new::before {
     content: "New!";
     background-color: #087f23;
