--- a/Grid.css
+++ b/Grid.css
@@ -8,6 +8,12 @@
 .grid{
     padding-left: 7.6%;
 }
+.bg-nav{
+    background-color: rgba(255, 255, 255, 0.6);
+}
+.nav-link:hover{
+    background-color: rgba(255, 255, 255, 0.7);
+}
 /*.flag-new::before {
     content: "New!";
     background-color: #087f23;
