--- a/Grid.css
+++ b/Grid.css
@@ -14,6 +14,9 @@
 .nav-link:hover{
     background-color: rgba(255, 255, 255, 0.7);
 }
+.main{
+  margin: 0px 150px;
+}
 /*.flag-new::before {
     content: "New!";
     background-color: #087f23;
