--- a/Grid.css
+++ b/Grid.css
@@ -1,9 +1,15 @@
+body{
+  font-family: 'Open Sans' !important;
+}
 .ff{
     font-size: 13.5px;
     background-color: #1d9bf0;
 }
 .bg-grid{
     background-image: url(image/black\ grid.png);
+}
+.bg-grid2{
+  background-image: url(image/white\ grid.png);
 }
 .grid{
     padding-left: 7.6%;
@@ -15,7 +21,7 @@
     background-color: rgba(255, 255, 255, 0.7);
 }
 .main{
-  margin: 0px 150px;
+  margin: 0px 140px;
 }
 /*.flag-new::before {
     content: "New!";
