--- a/Grid.css
+++ b/Grid.css
@@ -21,7 +21,13 @@ body{
     background-color: rgba(255, 255, 255, 0.7);
 }
 .main{
-  margin: 0px 140px;
+  margin: 0px 150px;
+}
+.bg-violet{
+  background-color: #5e35b1;
+}
+.col-3{
+  width: 510px !important;
 }
 /*.flag-new::before {
     content: "New!";
