change bg img for grid2

--- a/Grid.css
+++ b/Grid.css
@@ -9,7 +9,7 @@ body{
     background-image: url(image/black\ grid.png);
 }
 .bg-grid2{
-  background-image: url(image/white\ grid.png);
+  background-image: url(image/gird2.jpg);
 }
 .grid{
     padding-left: 7.6%;
